@@ -17,6 +17,7 @@ VP 9.2.1 Changelog
   useexisting is 0 or 1 (if no existing/playing copy of the sound is found, then a new one is created)
   restart is 0 or 1 (only useful if useexisting is 1)
 
+- per table setting of adaptive vsync (-1 = default, 0 = off, 1 = automatic detection, anything else: refresh rate in Hz)
  
 - tweak key input code to save one frame (or more?) of lag
 
